# zkos-wrapper

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  delegation_proof  proof  proof_output.json  rust-toolchain  rust-toolchain.toml  vk.json
.cargo/: deny.toml
.github/workflows/: ci.yml  deny.yml  secrets_scanner.yaml
blake_inner_verifier/: Cargo.toml
blake_inner_verifier/src/: lib.rs
blake_inner_verifier/src/imports/: circuit_quotient.rs
circuit_mersenne_field/: Cargo.toml
circuit_mersenne_field/src/: extension_trait.rs  field.rs  fourth_ext.rs  lib.rs  second_ext.rs
crs/: README.md
docs/: README.md  end_to_end.md  overview.md
examples/: proof_0.json  proof_old.json
src/: lib.rs  main.rs  zkos_utils.rs
src/circuits/: compression.rs  risc_wrapper.rs  snark_wrapper.rs
src/delegation_verifier/: mod.rs  skeleton.rs
src/delegation_verifier/imports/: circuit_quotient.rs
src/prepare_proof/: mod.rs
src/tests/: blake2s_tests.rs  compression_tests.rs  mod.rs  risc_wrapper_tests.rs  snark_wrapper_tests.rs
src/transcript/: blake2s_reduced.rs  mod.rs
src/verifier/: blake2s_reduced.rs  dbg.txt  layout_import.rs  mod.rs  prover_structs.rs  quotient_import.rs  risc_v_cycles_circuit_layout.rs  risc_v_cycles_layout.json  risc_v_cycles_quotient.rs  transcript.rs  utils.rs  verifier_traits.rs
src/verifier_circuit/: mod.rs
src/wrapper_inner_verifier/: mod.rs  skeleton.rs
src/wrapper_inner_verifier/imports/: circuit_layout.rs  circuit_quotient.rs  final_state_constants.rs  mod.rs
src/wrapper_utils/: mod.rs  prover_structs.rs  verifier_traits.rs
testing_data/: compression_proof  compression_vk  register_final_values  risc_proof  risc_wrapper_proof  risc_wrapper_vk  snark_wrapper_proof  snark_wrapper_vk
wrapper/: Cargo.toml
wrapper/src/: lib.rs  main.rs
wrapper/src/blake2_inner_verifier/: mod.rs  skeleton.rs
wrapper/src/blake2_inner_verifier/imports/: mod.rs
wrapper/src/circuits/: compression.rs  mod.rs  risc_wrapper.rs  snark_wrapper.rs
wrapper/src/gpu/: compression.rs  mod.rs  risc_wrapper.rs  snark.rs
wrapper/src/tests/: compression_tests.rs  mod.rs  risc_wrapper_tests.rs  snark_wrapper_tests.rs
wrapper/src/transcript/: blake2s_reduced.rs  mod.rs
wrapper/src/wrapper_inner_verifier/: mod.rs
wrapper/src/wrapper_inner_verifier/imports/: circuit_quotient.rs  circuit_quotient_for_final_machine.rs  final_state_constants.rs  final_state_constants_for_final_machine.rs  mod.rs
wrapper/src/wrapper_utils/: mod.rs  prover_structs.rs  verifier_traits.rs
wrapper/testing_data/: compression_proof  compression_vk  final_machine_mode_compression_proof  final_machine_mode_compression_vk  final_machine_mode_risc_wrapper_proof  final_machine_mode_risc_wrapper_vk  final_machine_mode_snark_wrapper_proof  final_machine_mode_snark_wrapper_vk  risc_final_machine_proof  risc_proof  risc_wrapper_proof  risc_wrapper_vk  snark_wrapper_proof  snark_wrapper_vk
wrapper_generator/: Cargo.toml  blake2s_delegator_layout  delegation_layout  final_circuit_data  layout
wrapper_generator/src/: end_params_generator.rs  everywhere_except_last.rs  everywhere_except_last_two.rs  first_or_last_rows.rs  lib.rs  main.rs  memory_accumulators.rs  quotient_generator.rs  utils.rs
wrapper_my_verifier/: Cargo.toml
wrapper_my_verifier/src/: lib.rs
wrapper_my_verifier/src/imports/: final_state_constants.rs  final_state_constants_for_final_machine.rs
wrapper_utils/: Cargo.toml
wrapper_utils/src/: lib.rs  prover_structs.rs  verifier_traits.rs
wrapper_utils/src/transcript/: mod.rs
