[workspace]
resolver = "2"

members = ["circuit_mersenne_field", "wrapper", "wrapper_generator"]


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zkos-wrapper/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]


[workspace.dependencies]

circuit_mersenne_field = { path = "circuit_mersenne_field" }

boojum = { version = "=0.32.5", features = ["log_tracing"] }
bellman = { package = "zksync_bellman", version = "=0.32.5" }
rescue_poseidon = "=0.32.5"
snark_wrapper = "=0.32.5"

final_risc_verifier = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "final_reduced_risc_v_machine_verifier", features = [
    "proof_utils",
], tag = "v0.5.1" }
reduced_risc_verifier = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "reduced_risc_v_log_23_machine_verifier", features = [
    "proof_utils",
], tag = "v0.5.1" }
blake_verifier = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "blake2_with_compression_verifier", features = [
    "proof_utils",
], tag = "v0.5.1" }
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "execution_utils", tag = "v0.5.1" }
setups = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "setups", tag = "v0.5.1" }
mersenne_field = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "field", tag = "v0.5.1" }
zkos_verifier_generator = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "verifier_generator", tag = "v0.5.1" }
prover = { git = "https://github.com/matter-labs/zksync-airbender.git", package = "prover", tag = "v0.5.1" }

serde_json = { version = "1.0" }
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
clap = { version = "4.5.21", features = ["derive"] }
sha3 = "0.10"
rand = "0.8"

# Used for GPU proving.
shivini = "=0.155.2"
proof-compression = "=0.155.2"
zksync-gpu-prover = "=0.155.2"

[profile.release.package."blake2_with_compression_verifier"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release]
lto = false
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true
