[package]
name = "circuit_mersenne_field"
version = "0.1.0"
edition = "2021"

[dependencies]
boojum = { git = "https://github.com/matter-labs/zksync-crypto.git", package="boojum", branch = "main" }
# boojum = { path = "../../zksync-crypto/crates/boojum"}
mersenne_field = {git="https://github.com/matter-labs/zksync-airbender.git", package="field", tag="0.0.5"}
# mersenne_field = {path="../../air_compiler/field", package="field"}
rand = "0.8"
