cargo-features = ["edition2024"]

[package]
name = "wrapper_generator"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
zkos_verifier_generator = {git="https://github.com/matter-labs/zksync-airbender.git", package="verifier_generator", branch="main"}
# zkos_verifier_generator = {path="../../zksync-airbender/verifier_generator", package="verifier_generator"}
prover = {git="https://github.com/matter-labs/zksync-airbender.git", package="prover", branch="main"}
# prover = {path="../../zksync-airbender/prover", package="prover"}
execution_utils = {git="https://github.com/matter-labs/zksync-airbender.git", package="execution_utils", branch="main"}
# execution_utils = {path="../../zksync-airbender/execution_utils"}
setups = {git="https://github.com/matter-labs/zksync-airbender.git", package="setups", branch="main"}
# setups = {path="../../zksync-airbender/circuit_defs/setups"}
serde_json = "*"
serde = { version = "1", default-features = false, features = ["derive", "alloc"]}


syn = { version = "2", features = ["extra-traits", "printing", "full"]}
quote = { version = "1" }
proc-macro2 = "1"
proc-macro-error = "1"
