cargo-features = ["edition2024"]

[package]
name = "wrapper_generator"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
zkos_verifier_generator = {git="https://github.com/matter-labs/zksync-airbender.git", package="verifier_generator", tag="0.0.5"}
# zkos_verifier_generator = {path="../../air_compiler/verifier_generator", package="verifier_generator"}
prover = {git="https://github.com/matter-labs/zksync-airbender.git", package="prover", tag="0.0.5"}
# prover = {path="../../air_compiler/prover", package="prover"}
execution_utils = {git="https://github.com/matter-labs/zksync-airbender.git", package="execution_utils", tag="0.0.5"}
# execution_utils = {path="../../air_compiler/execution_utils"}
setups = {git="https://github.com/matter-labs/zksync-airbender.git", package="setups", tag="0.0.5"}
# setups = {path="../../air_compiler/circuit_defs/setups"}
serde_json = "*"
serde = { version = "1", default-features = false, features = ["derive", "alloc"]}


syn = { version = "2", features = ["extra-traits", "printing", "full"]}
quote = { version = "1" }
proc-macro2 = "1"
proc-macro-error = "1"
